<resources>
    <string name="app_name">Scouts ANSI</string>

    <string name="btn_accept">Aceptar</string>
    <string name="btn_accept_register_application">Aceptación de solicitud de registro</string>
    <string name="btn_aluxes_information">Datos del niño</string>
    <string name="btn_next">Siguiente</string>
    <string name="btn_preview">Regresar</string>
    <string name="btn_tutor_information_desc">Datos de contacto de padre o tutor</string>
    <string name="btn_save_register">Guardar registro</string>
    <string name="btn_scout_history">¿Ha estado anteriormente en otro grupo de Scouts? \n Si es la primera vez que entra, deja en blanco la siguiente información. </string>

    <string name="tv_activity_calendar">Calendario</string>
    <string name="tv_accept">Acepto</string>
    <string name="tv_activities_camporee">Actividades Camporee</string>
    <string name="tv_activities_weekly">Actividades semanales</string>
    <string name="tv_address">Dirección</string>
    <string name="tv_agsmex">Agrupación Scout Mexicana AC. AGSMEX</string>
    <string name="tv_aluxes">Aluxes</string>
    <string name="tv_aluxes_cast_section">Aluxes / Castores</string>
    <string name="tv_ansi">Asociación Nacional de Scouts Independientes. ANSI</string>
    <string name="tv_ansi_main">Asociación Nacional de Scouts Independientes</string>
    <string name="tv_asmac">Asociación de Scouts de México AC. ASMAC</string>
    <string name="tv_association">Asociación</string>
    <string name="tv_aluxes_age">Niños de 4 a 6 años</string>
    <string name="tv_always_ready">\"Siempre listos\"</string>
    <string name="tv_troop_age">Jóvenes de 11 a 16 años</string>
    <string name="tv_aluxes_round">Ronda de Aluxes</string>
    <string name="tv_birth_date">Fecha de nacimiento</string>
    <string name="tv_clan">Clan</string>
    <string name="tv_clan_fem">Clan Femenino</string>
    <string name="tv_clan_masc">Clan Masculino</string>
    <string name="tv_class_troop">Clases Tropa</string>
    <string name="tv_class_troop_select">Selecciona una clase</string>
    <string name="tv_catholic">Católico</string>
    <string name="tv_curp">CURP</string>
    <string name="tv_comunity">Comunidad</string>
    <string name="tv_contact">Contacto</string>
    <string name="tv_christian">Cristiano</string>
    <string name="tv_date_register">Fecha de ingreso</string>
    <string name="tv_district">Distrito</string>
    <string name="tv_email">Correo Electrónico</string>
    <string name="tv_event">Evento</string>
    <string name="tv_events">Eventos</string>
    <string name="tv_events_coming">Próximos eventos</string>
    <string name="tv_issste_explorer">Exploradores del ISSSTE</string>
    <string name="tv_gacelas">Gacelas</string>
    <string name="tv_gallery">Galería</string>
    <string name="tv_genre">Género</string>
    <string name="tv_group_address">Jardín del Arte, C. Sirio, Reserva Territorial Atlixcáyotl</string>
    <string name="tv_group_name">Grupo 1 Mixcóatl, Distrito Puebla</string>
    <string name="tv_heard_section">Manada</string>
    <string name="tv_library">Biblioteca</string>
    <string name="tv_list_challenges">Lista de retos</string>
    <string name="tv_lobatos">Lobatos</string>
    <string name="tv_location">Localidad</string>
    <string name="tv_maximum_advance">Adelanto Máximo</string>
    <string name="tv_motto_group">\"Siempre listos\"</string>
    <string name="tv_municipality">Municipio</string>
    <string name="tv_name">Nombre completo</string>
    <string name="tv_name_group">Nombre de grupo</string>
    <string name="tv_name_lider">Nombre de guía de patrulla</string>
    <string name="tv_name_patrol">Nombre de patrulla</string>
    <string name="tv_new_register">Nuevo</string>
    <string name="tv_new_register_aluxe">Registro nuevo aluxe</string>
    <string name="tv_number_group">Número de Grupo</string>
    <string name="tv_number_social_security">Número de Seguro Social</string>
    <string name="tv_other">Otro</string>
    <string name="tv_other_association">¿A qué asociación perteneció?</string>
    <string name="tv_patroll_class">Clase de patrulla</string>
    <string name="tv_phone">Teléfono</string>
    <string name="tv_link_evidence">Link de Evidencia</string>
    <string name="tv_local_phone">Teléfono Local</string>
    <string name="tv_cell_phone">Teléfono Celular</string>
    <string name="tv_payment_folio">Folio de pago de registro</string>
    <string name="tv_payment_folio_desc">Folio o clave de rastreo de tu pago</string>
    <string name="tv_privacy_data">Declaramos bajo protesta de decir la verdad que los datos personales escritos en esta autorización de ingreso a la Asociación Nacional de Scouts Independientes A.C., corresponden al menor de edad de quien ejercemos legalmente la patria protestad. Asimismo, que lo autorizamos a ingresar a dicha asociación y a participar en las actividades scouts. Liberamos y eximimos a la Asociación, sus miembros y colaboradores de toda responsabilidad por los daños, perjuicios y lesiones que nuestro autorizado sufriera durante esas actividades o por causa de ellas y asumimos las responsabilidades por los daños que resulten debido a su intervención. Este permiso se lo otorgamos por todo el tiempo que sea aspirante o miembro de la asociación, sin menos cabo de que su permanencia en ella tenga interrupciones largas o cortas, y hasta que sea mayor de edad o lo cancelemos formalmente en un escrito que entreguemos al jefe del grupo scout de su adscripción. De la misma manera estamos enterados que la Asociación no otorga seguro de vida ni contra accidentes. Así mismo otorgo autorización a la Asociación Nacional de Scouts Independientes A.C. (ANSI) para que las fotos y videos de mi hijo(a) participen en la difusión de material fotográfico, videos, audios gráficos, fílmicos y demás formas de promover la difusión del movimiento socut en medios electrónicos, redes sociales, sitios web de hospedaje y medios de comunicación. La Asociación Nacional de Scouts Independientes (ANSI) declara que no difundirá los datos personales en apego al aviso de privacidad. Este permiso se lo otorgo por todo el tiempo que se aaspirante o miembro de la asociación, sin menos cabo de que su permanencia en ella tenga interrupciones largas o cortas, y hasta que sea mayor de edad o lo cancelemos formalmente en un escrito que entreguemos al jefe del grupo scout de su adscripción. De la misma manera estamos enterados que la Asociación no otorga Seguro de Vida ni contra accidentes.</string>
    <string name="tv_religion">Religión</string>
    <string name="tv_register">Registro</string>
    <string name="tv_register_patrol">Carga de evidencias</string>
    <string name="tv_register_success">Registro completado con éxito</string>
    <string name="tv_re_entry">Re-ingreso</string>
    <string name="tv_register_option_title">¿Qué deseas realizar?</string>
    <string name="tv_title_events">Consulta y revisión de eventos de tropas 2023</string>
    <string name="tv_title_new_registry">Formulario de registro de evidencias</string>
    <string name="tv_title_new_registry_leader">Solicitud de Ingreso de Miembros Beneficiarios 2023</string>
    <string name="tv_title_weekly_actv">Listado de actividades por patrulla</string>
    <string name="tv_section">Sección</string>
    <string name="tv_scouter">Consejo de Grupo</string>
    <string name="tv_title_bar_main">Menú</string>
    <string name="tv_suburb">Colonia</string>
    <string name="tv_sub_title_new_registry">Formulario para completar la hoja de registro de muchachos a la ANSI</string>
    <string name="tv_sub_title_new_registry_leader">Recuerda que solo debe ser un registro por patrulla</string>
    <string name="tv_takepicture_hint">Fotografía del niño</string>
    <string name="tv_takepicture_hint_msg">Foto frontal (del pecho hacia arriba)</string>
    <string name="tv_troop_section">Tropa / Compañia</string>
    <string name="tv_troop_fem">Tropa Femenina</string>
    <string name="tv_troop_male">Tropa Masculina</string>
    <string name="tv_female">Femenino</string>
    <string name="tv_male">Masculino</string>
    <string name="tv_zip_code">Código Postal</string>
    <string name="tv_religion_other_question">¿Cuál es tu religión?</string>
    <string name="tv_what_do_you_want_to_consult">¿Qué deseas consultar?</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="fcm_message">¡TIENES UN NUEVO RETO!</string>
    <string name="fcm_message_token">TOKEN</string>

</resources>